partial file upload implementation (need to finish checks)

--- a/Src/Configs/Config.json
+++ b/Src/Configs/Config.json
@@ -4,5 +4,10 @@
         "username":"root",
         "password":"",
         "dbName":"arttradedb"
+    },
+
+    "File_configs":{
+        "max_upload_size":"10000000",
+        "allowed_formats": ["jpg", "png", "jpeg", "gif"]
     }
 }
